k8s/resources/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - api.bugparty.net
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: placeholder
spec:
  hosts:
  - api.bugparty.net
  gateways:
  - istio-ingress/my-gateway
  http:
  - name: direct-response
    directResponse:
      status: 200
      body:
        string: "Future Home of the bug-party API"
